# stock-tracker

./: README.md  commands.txt  db.sqlite3  main.py  pyproject.toml
core/: consumers.py  routing.py  tasks.py  urls.py  views.py
core/templates/core/: base.html  live_stock_tracker.html  stock_list.html
stocktracker/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
