[project]
name = "stock-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.7",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "redis>=6.4.0",
    "yfinance>=0.2.66",
]
